force-app/main/default/objects/Asset__c/fields/LS_AccName_with_Ass_Name__c.field-meta.xml
<CustomField>
    <fullName>LS_AccName_with_Ass_Name__c</fullName>
    <externalId>true</externalId>
    <label>Asset External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>