force-app/main/default/objects/Asset__c/fields/MID_Notification_Complete__c.field-meta.xml
<CustomField>
    <fullName>MID_Notification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MID Notification Complete</label>
    <type>Checkbox</type>
</CustomField>