force-app/main/default/objects/Asset__c/fields/Total_EML__c.field-meta.xml
<CustomField>
    <fullName>Total_EML__c</fullName>
    <formula>VG_EML_BI__c + VG_EML_PD__c</formula>
    <label>Total EML</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>