force-app/main/default/objects/Asset__c/fields/Total_Material_Damage__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Damage__c</fullName>
    <label>Total Material Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>