force-app/main/default/objects/Asset__c/fields/Vehcicle_CC__c.field-meta.xml
<CustomField>
    <fullName>Vehcicle_CC__c</fullName>
    <label>Vehcicle CC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>