force-app/main/default/objects/Asset__c/fields/Vehcile_GVW__c.field-meta.xml
<CustomField>
    <fullName>Vehcile_GVW__c</fullName>
    <label>Vehcile GVW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>