force-app/main/default/objects/Asset__c/fields/Vehicle_Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number_of_Seats__c</fullName>
    <label>Vehicle Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>