force-app/main/default/objects/Asset__c/fields/Vehicle_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_No__c</fullName>
    <externalId>true</externalId>
    <label>Vehicle Registration No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>