force-app/main/default/objects/Asset__c/fields/VG_Acc_Name_with_St_City__c.field-meta.xml
<CustomField>
    <fullName>VG_Acc_Name_with_St_City__c</fullName>
    <externalId>true</externalId>
    <label>Acc Name with St,City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>