force-app/main/default/objects/Asset__c/fields/VG_Aliases__c.field-meta.xml
<CustomField>
    <fullName>VG_Aliases__c</fullName>
    <label>Aliases (Alternative names)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>