force-app/main/default/objects/Asset__c/fields/VG_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Launcher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>