force-app/main/default/objects/Asset__c/fields/VG_Automatic_Fire_alarm__c.field-meta.xml
<CustomField>
    <fullName>VG_Automatic_Fire_alarm__c</fullName>
    <label>Automatic Fire alarm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Level</fullName>
            </value>
            <value>
                <fullName>Low level</fullName>
            </value>
            <value>
                <fullName>Medium Level</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>