force-app/main/default/objects/Asset__c/fields/VG_BI_Indemnity_Period__c.field-meta.xml
<CustomField>
    <fullName>VG_BI_Indemnity_Period__c</fullName>
    <label>BI Indemnity Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>15 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>21 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>