force-app/main/default/objects/Asset__c/fields/VG_Block_ID__c.field-meta.xml
<CustomField>
    <fullName>VG_Block_ID__c</fullName>
    <label>Block ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>