force-app/main/default/objects/Asset__c/fields/VG_Building_No__c.field-meta.xml
<CustomField>
    <fullName>VG_Building_No__c</fullName>
    <label>Building No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>