force-app/main/default/objects/Asset__c/fields/VG_City__c.field-meta.xml
<CustomField>
    <fullName>VG_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>