force-app/main/default/objects/Asset__c/fields/VG_Comment__c.field-meta.xml
<CustomField>
    <fullName>VG_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>