force-app/main/default/objects/Asset__c/fields/VG_Company_Division__c.field-meta.xml
<CustomField>
    <fullName>VG_Company_Division__c</fullName>
    <label>Company/Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>