force-app/main/default/objects/Asset__c/fields/VG_Component_Details__c.field-meta.xml
<CustomField>
    <fullName>VG_Component_Details__c</fullName>
    <label>Component Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>