force-app/main/default/objects/Asset__c/fields/VG_Contents_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Contents_SI__c</fullName>
    <label>Contents SI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>