force-app/main/default/objects/Asset__c/fields/VG_Coverage__c.field-meta.xml
<CustomField>
    <fullName>VG_Coverage__c</fullName>
    <label>Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M3 - Fully Comprehensive</fullName>
            </value>
            <value>
                <fullName>M6 - Fire &amp; Theft Only</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Fire &amp; Theft</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>