force-app/main/default/objects/Asset__c/fields/VG_Customer_Property_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Customer_Property_SI__c</fullName>
    <label>TSI Customer Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>