force-app/main/default/objects/Asset__c/fields/VG_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>VG_Date_Added__c</fullName>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>