force-app/main/default/objects/Asset__c/fields/VG_Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>VG_Date_Removed__c</fullName>
    <label>Date Removed</label>
    <type>Date</type>
</CustomField>