force-app/main/default/objects/Asset__c/fields/VG_Description__c.field-meta.xml
<CustomField>
    <fullName>VG_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>