force-app/main/default/objects/Asset__c/fields/VG_Design_Life__c.field-meta.xml
<CustomField>
    <fullName>VG_Design_Life__c</fullName>
    <label>Design Life (yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>