force-app/main/default/objects/Asset__c/fields/VG_EML_BI__c.field-meta.xml
<CustomField>
    <fullName>VG_EML_BI__c</fullName>
    <label>EML BI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>