force-app/main/default/objects/Asset__c/fields/VG_EML_PD__c.field-meta.xml
<CustomField>
    <fullName>VG_EML_PD__c</fullName>
    <label>EML PD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>