force-app/main/default/objects/Asset__c/fields/VG_EOL_Power_Margin__c.field-meta.xml
<CustomField>
    <fullName>VG_EOL_Power_Margin__c</fullName>
    <label>EOL Power Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>