force-app/main/default/objects/Asset__c/fields/VG_Equipments__c.field-meta.xml
<CustomField>
    <fullName>VG_Equipments__c</fullName>
    <label>Equipments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AOCS - CMG</fullName>
            </value>
            <value>
                <fullName>AOCS - Earth Sensor</fullName>
            </value>
            <value>
                <fullName>AOCS - FMW</fullName>
            </value>
            <value>
                <fullName>AOCS - GPS receiver</fullName>
            </value>
            <value>
                <fullName>AOCS - Gyro Assembly</fullName>
            </value>
            <value>
                <fullName>AOCS - Magnetotorquer</fullName>
            </value>
            <value>
                <fullName>AOCS - Reaction wheel</fullName>
            </value>
            <value>
                <fullName>AOCS - Star Tracker</fullName>
            </value>
            <value>
                <fullName>AOCS - Sun Sensor</fullName>
            </value>
            <value>
                <fullName>C and C - Beacon</fullName>
            </value>
            <value>
                <fullName>C and C - Central computer</fullName>
            </value>
            <value>
                <fullName>C and C - Crypto module</fullName>
            </value>
            <value>
                <fullName>C and C - RIU/PIU</fullName>
            </value>
            <value>
                <fullName>C and C - TC Receiver</fullName>
            </value>
            <value>
                <fullName>C and C - TM Transmitter</fullName>
            </value>
            <value>
                <fullName>EO Payload - Data Formatting Unit</fullName>
            </value>
            <value>
                <fullName>EO Payload - Data transmitter</fullName>
            </value>
            <value>
                <fullName>EO payload - Imaging Instrument</fullName>
            </value>
            <value>
                <fullName>EO Payload - Solid State Recorder</fullName>
            </value>
            <value>
                <fullName>EO Payload - TR Module (SAR)</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Deployable Antenna</fullName>
            </value>
            <value>
                <fullName>Mechanisms - HOP actuator</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Kevlar cutter</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Other actuator</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Pyro actuator</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Robotic arm</fullName>
            </value>
            <value>
                <fullName>Mechanisms - SADM</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Solar Array deployment</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Steerable Antenna</fullName>
            </value>
            <value>
                <fullName>Mechanisms - Unfurlable Antenna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>