force-app/main/default/objects/Asset__c/fields/VG_Full_time_public_Fire_Brigade_staff__c.field-meta.xml
<CustomField>
    <fullName>VG_Full_time_public_Fire_Brigade_staff__c</fullName>
    <label>Full time public Fire Brigade staff?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Over 10 mins</fullName>
            </value>
            <value>
                <fullName>Under 10 mins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>