force-app/main/default/objects/Asset__c/fields/VG_Full_Value_Building__c.field-meta.xml
<CustomField>
    <fullName>VG_Full_Value_Building__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TSI Full Value Building</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>