force-app/main/default/objects/Asset__c/fields/VG_Full_Value_Building_P__c.field-meta.xml
<CustomField>
    <fullName>VG_Full_Value_Building_P__c</fullName>
    <label>Full Value Building</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <default>true</default>
                <label>F</label>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>