force-app/main/default/objects/Asset__c/fields/VG_Heritage__c.field-meta.xml
<CustomField>
    <fullName>VG_Heritage__c</fullName>
    <label>Heritage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>