force-app/main/default/objects/Asset__c/fields/VG_Int_ID__c.field-meta.xml
<CustomField>
    <fullName>VG_Int_ID__c</fullName>
    <label>Int. ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>