force-app/main/default/objects/Asset__c/fields/VG_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Launch_Date__c</fullName>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>