force-app/main/default/objects/Asset__c/fields/VG_Launch_Operator__c.field-meta.xml
<CustomField>
    <fullName>VG_Launch_Operator__c</fullName>
    <label>Launch Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARIANESPACE</fullName>
            </value>
            <value>
                <fullName>Blue Origin LLC</fullName>
            </value>
            <value>
                <fullName>CALT</fullName>
            </value>
            <value>
                <fullName>GILMOUR AEROSPACE</fullName>
            </value>
            <value>
                <fullName>IHI Corporation</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>ISRO</fullName>
            </value>
            <value>
                <fullName>KOSMOTRAS</fullName>
            </value>
            <value>
                <fullName>LOCKHEED MARTIN CORPORATION</fullName>
            </value>
            <value>
                <fullName>MHI</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Northrop Grumman Innovation Systems (NGIS)</fullName>
            </value>
            <value>
                <fullName>ROCKET LAB</fullName>
            </value>
            <value>
                <fullName>ROSCOSMOS</fullName>
            </value>
            <value>
                <fullName>SEA LAUNCH</fullName>
            </value>
            <value>
                <fullName>SKYRORA</fullName>
            </value>
            <value>
                <fullName>SPACEX</fullName>
            </value>
            <value>
                <fullName>STARSEM</fullName>
            </value>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>VIRGIN ORBIT</fullName>
            </value>
            <value>
                <fullName>XXXXXXXXXXXX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>