force-app/main/default/objects/Asset__c/fields/VG_Launcher__c.field-meta.xml
<CustomField>
    <fullName>VG_Launcher__c</fullName>
    <label>Launcher</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>