force-app/main/default/objects/Asset__c/fields/VG_Launcher_family__c.field-meta.xml
<CustomField>
    <fullName>VG_Launcher_family__c</fullName>
    <label>Launcher family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANGARA</fullName>
            </value>
            <value>
                <fullName>ANTARES</fullName>
            </value>
            <value>
                <fullName>ARIANE 4</fullName>
            </value>
            <value>
                <fullName>ARIANE 5</fullName>
            </value>
            <value>
                <fullName>ATLAS 2</fullName>
            </value>
            <value>
                <fullName>ATLAS 3</fullName>
            </value>
            <value>
                <fullName>ATLAS 5</fullName>
            </value>
            <value>
                <fullName>BLUE ORIGIN LAUNCHERS</fullName>
            </value>
            <value>
                <fullName>COSMOS</fullName>
            </value>
            <value>
                <fullName>DELTA 2</fullName>
            </value>
            <value>
                <fullName>DELTA 4</fullName>
            </value>
            <value>
                <fullName>DNEPR</fullName>
            </value>
            <value>
                <fullName>ELECTRON</fullName>
            </value>
            <value>
                <fullName>EPSILON 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>FALCON 9</fullName>
            </value>
            <value>
                <fullName>GSLV</fullName>
            </value>
            <value>
                <fullName>H 2</fullName>
            </value>
            <value>
                <fullName>LANDSPACE</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 1 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 2 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 3 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 4 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 5 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 6 SERIES</fullName>
            </value>
            <value>
                <fullName>LONG MARCH 7 SERIES</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PROTON K</fullName>
            </value>
            <value>
                <fullName>PROTON M</fullName>
            </value>
            <value>
                <fullName>PSLV</fullName>
            </value>
            <value>
                <fullName>ROCKOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>