force-app/main/default/objects/Asset__c/fields/VG_LaunchID__c.field-meta.xml
<CustomField>
    <fullName>VG_LaunchID__c</fullName>
    <label>LaunchID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>