force-app/main/default/objects/Asset__c/fields/VG_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>VG_Manufacturer__c</fullName>
    <label>Satellite System Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aalborg University</fullName>
            </value>
            <value>
                <fullName>Aalto University</fullName>
            </value>
            <value>
                <fullName>Aarhus University</fullName>
            </value>
            <value>
                <fullName>ACAE/ITCR (Joint)</fullName>
            </value>
            <value>
                <fullName>Aeronautical Research and Test Institute (VZLU)</fullName>
            </value>
            <value>
                <fullName>Aerospace DongFangHong (DFH) Development Limited</fullName>
            </value>
            <value>
                <fullName>Aerospatiale Espace</fullName>
            </value>
            <value>
                <fullName>Aichi University of Technology</fullName>
            </value>
            <value>
                <fullName>AIRBUS DEFENCE AND SPACE</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space/Thales Alenia Space JOINT</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space (Elancourt)</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space (Stevenage)</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space GmbH (Friedrichshafen)</fullName>
            </value>
            <value>
                <fullName>Alcatel Alenia Space (Cannes)</fullName>
            </value>
            <value>
                <fullName>Alcatel Space Industries (Cannes)</fullName>
            </value>
            <value>
                <fullName>Al-Farabi Kazakh National University (KazGU)</fullName>
            </value>
            <value>
                <fullName>All Nations University (ANUC)</fullName>
            </value>
            <value>
                <fullName>AMSAT- Radio Amateur Satellite Corp. (HQ)</fullName>
            </value>
            <value>
                <fullName>Analytical Space</fullName>
            </value>
            <value>
                <fullName>ANTRIX</fullName>
            </value>
            <value>
                <fullName>Aquila Space</fullName>
            </value>
            <value>
                <fullName>ARSAT</fullName>
            </value>
            <value>
                <fullName>Asgardia</fullName>
            </value>
            <value>
                <fullName>Astranis Space Technologies</fullName>
            </value>
            <value>
                <fullName>Astrium Limited - Stevenage (Part of EADS)</fullName>
            </value>
            <value>
                <fullName>Astrium Satellites GMBH - Friedrichshafen (Part of EADS)</fullName>
            </value>
            <value>
                <fullName>Astrium Satellites SAS (Toulouse) (Part of EADS)</fullName>
            </value>
            <value>
                <fullName>Astrium Satellites SAS (Velizy) (Part of EADS)</fullName>
            </value>
            <value>
                <fullName>Astrocast SA</fullName>
            </value>
            <value>
                <fullName>Astro Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>