force-app/main/default/objects/Asset__c/fields/VG_MB_PD_Deductible__c.field-meta.xml
<CustomField>
    <fullName>VG_MB_PD_Deductible__c</fullName>
    <label>MB PD Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>