force-app/main/default/objects/Asset__c/fields/VG_Mission__c.field-meta.xml
<CustomField>
    <fullName>VG_Mission__c</fullName>
    <label>Mission</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>