force-app/main/default/objects/Asset__c/fields/VG_Missions__c.field-meta.xml
<CustomField>
    <fullName>VG_Missions__c</fullName>
    <label>Missions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>