force-app/main/default/objects/Asset__c/fields/VG_OML__c.field-meta.xml
<CustomField>
    <fullName>VG_OML__c</fullName>
    <label>OML (yr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>