force-app/main/default/objects/Asset__c/fields/VG_Operator__c.field-meta.xml
<CustomField>
    <fullName>VG_Operator__c</fullName>
    <label>Satellite Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aalborg University</fullName>
            </value>
            <value>
                <fullName>Aalto University</fullName>
            </value>
            <value>
                <fullName>Aarhus University</fullName>
            </value>
            <value>
                <fullName>ABAE - Venezuela (Bolivarian Agency for Space Activities)</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>ACAE/ITCR (Joint)</fullName>
            </value>
            <value>
                <fullName>Aeronautical Research and Test Institute (VZLU)</fullName>
            </value>
            <value>
                <fullName>AGENCE SPATIALE ALGERIENNE</fullName>
            </value>
            <value>
                <fullName>Aichi University of Technology</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space Communications, Intelligence &amp; Security - CIS (Op.)</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space GEO Intelligence (Op.)</fullName>
            </value>
            <value>
                <fullName>Airbus Defence and Space Milsat Services GmbH (Op.)</fullName>
            </value>
            <value>
                <fullName>AISTECH SPACE</fullName>
            </value>
            <value>
                <fullName>Al-Farabi Kazakh National University (KazGU)</fullName>
            </value>
            <value>
                <fullName>All Nations University (ANUC)</fullName>
            </value>
            <value>
                <fullName>American University of Sharjah (AUS)</fullName>
            </value>
            <value>
                <fullName>AMSAT-C (China)/CAMSAT - Chinese Amateur Satellite</fullName>
            </value>
            <value>
                <fullName>AMSAT-NA (North America)</fullName>
            </value>
            <value>
                <fullName>AMSAT-NL</fullName>
            </value>
            <value>
                <fullName>AMSAT- Radio Amateur Satellite Corp. (HQ)</fullName>
            </value>
            <value>
                <fullName>Analytical Space</fullName>
            </value>
            <value>
                <fullName>Arabsat (Arab Satellite Communications Organisation)</fullName>
            </value>
            <value>
                <fullName>ARSAT</fullName>
            </value>
            <value>
                <fullName>Asgardia</fullName>
            </value>
            <value>
                <fullName>ASI/CNES Joint</fullName>
            </value>
            <value>
                <fullName>Asiasat - Asia Satellite Telecommunications Co. Limited</fullName>
            </value>
            <value>
                <fullName>Astranis Space Technologies</fullName>
            </value>
            <value>
                <fullName>Astrocast SA</fullName>
            </value>
            <value>
                <fullName>Astro Digital</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>